@@ -16,30 +16,20 @@ import java.util.stream.Collectors;
 @ControllerAdvice
 public class CustomErrorController {
 
-    @ExceptionHandler(TransactionSystemException.class)
-    ResponseEntity handleJPAViolations(TransactionSystemException exception) {
-        ResponseEntity.BodyBuilder responseEntity = ResponseEntity.badRequest();
-
-        if (exception.getCause().getCause() instanceof ConstraintViolationException){
-            ConstraintViolationException ve = (ConstraintViolationException) exception.getCause().getCause();
-            List errors = ve.getConstraintViolations().stream().map(constraintViolation -> {
-                Map<String,String> errMap = new HashMap<>();
-                errMap.put(constraintViolation.getPropertyPath().toString(), constraintViolation.getMessage());
-                return errMap;
-            }).toList();
-            return responseEntity.body(errors);
-        }
-
-        return responseEntity.build();
+    @ExceptionHandler
+    ResponseEntity handleJPAViolations(TransactionSystemException exception){
+        return ResponseEntity.badRequest().build();
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     ResponseEntity handleBindErrors(MethodArgumentNotValidException exception){
-        List errorList = exception.getFieldErrors().stream().map(fieldError -> {
-            Map<String,String> errorMap = new HashMap<>();
-            errorMap.put(fieldError.getField(),fieldError.getDefaultMessage());
-            return errorMap;
-        }).toList();
+
+        List errorList = exception.getFieldErrors().stream()
+                .map(fieldError -> {
+                    Map<String, String > errorMap = new HashMap<>();
+                    errorMap.put(fieldError.getField(), fieldError.getDefaultMessage());
+                    return errorMap;
+                }).collect(Collectors.toList());
 
         return ResponseEntity.badRequest().body(errorList);
     }
